# sccmod

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yaml  create-release.yaml
examples/: openblas.py
scripts/: test-all.sh
src/: archive.rs  callbacks.rs  cli.rs  config.rs  downloaders.rs  environment.rs  file_manager.rs  flavours.rs  info.rs  lib.rs  log.rs  main.rs  module.rs  module_resolver.rs  modulefile.rs  python_interop.rs  shell.rs
src/builders/: builder_trait.rs  cmake.rs  make.rs
src/sccmod/: builders.py  downloaders.py  env.py  module.py
