[package]
name = "sccmod"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.6"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
colored = "2.1.0"
crossterm = "0.27.0"
pyo3 = { version = "0.21.0", features = ["auto-initialize"] }
toml = "0.8.12"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
#missing_docs = "deny"

