[package]
name = "sccmod"
authors = ["Toby Davis \"Pencilcaseman\""]
version = "0.1.2"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pencilcaseman/sccmod"
documentation = "https://docs.rs/sccmod"

description = "A mediocre module manager for handling multiple versions of self-compiled modules"
keywords = ["package-manager", "version-system", "builder"]
categories = ["package-manager"]

[dependencies]
anstyle = "1.0.6"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
colored = "2.1.0"
crossterm = "0.27.0"
pyo3 = { version = "0.21.0", features = ["auto-initialize"] }
toml = "0.8.12"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
#missing_docs = "deny"
