[package]
name = "sccmod"
authors = ["Toby Davis \"Pencilcaseman\""]
version = "0.5.7"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pencilcaseman/sccmod"
documentation = "https://docs.rs/sccmod"

description = "A mediocre module manager for handling multiple versions of self-compiled modules"
keywords = ["package-manager", "version-system", "builder"]
categories = ["command-line-utilities"]

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
colored = "2.1.0"
crossterm = "0.28.1"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
toml = "0.8.19"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
# missing_docs = "deny"
